--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   <h1>
     Tic Tac Toe
   </h1>
+  <div class="scoreboard">
+    <div>
+      Player1:
+    </div>
+    <div class="player1Score">
+    </div>
+    <div>
+      Player2:
+    </div>
+    <div class="player2Score">
+    </div>
+  </div>
   <div class="turnIndicator">
     The game is on! Player1, your turn!
   </div>
